--- a/css/layout.css
+++ b/css/layout.css
@@ -175,8 +175,7 @@ ul#nav li.current a { color: rgb(0, 73, 0); }
 #main h1 {
 	font: 3em 'Homemade Apple', cursive;	
 	color: #eec51d;
-	margin-bottom: 15px;	
-	padding: 0 10%;
+	padding: 0 2%;
 	text-shadow: 1px 1px 3px rgba(0, 0, 0, .5);	
 }
 
