--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -33,7 +33,7 @@ font-family: 'Water Brush', cursive; */
   	#main h1 { 
 		
 		font: 3em 'Homemade Apple', cursive;
-  		padding: 0 15%;
+  		padding: 0 10%;
   	}
 	#main p { font: 24px/34px 'montserrat-regular', sans-serif; }
 
@@ -61,7 +61,7 @@ font-family: 'Water Brush', cursive; */
    ------------------------------------------------------------------ */
    #main h1 { 
 	font: 3em 'Homemade Apple', cursive;
-  		padding: 0 8%;
+  		padding: 0 5%;
   	}
   	#main p { 
   		font: 16px/30px 'montserrat-regular', sans-serif;
@@ -304,8 +304,13 @@ font-family: 'Water Brush', cursive; */
 	/* main
    ------------------------------------------------------------- */
    #main { margin-top: 42px; }
-   #main h1 { font: 25px/1.2em 'montserrat-bold', sans-serif; 	}
+   #main h1 { 
+	font: 1.5em 'Homemade Apple', cursive; 
+	padding: 0 5px;
+	line-height: 42px;
+	margin-bottom: 5px;	}
   	#main p { font: 12px/21px 'montserrat-regular', sans-serif;	}
+
 
   	/* counter
    ------------------------------------------------------------- */
